--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,23 @@
 version: "3.7"
 services:
 
+  nginx-proxy:
+    image: jwilder/nginx-proxy
+    ports:
+      - "80:80"
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+
   server1:
     build: ./server1
     ports:
       - "8081:8080"
+    environment:
+      - VIRTUAL_HOST=server1.jackrose.co.nz
 
   server2:
     build: ./server2
     ports:
       - "8082:8080"
+    environment:
+      - VIRTUAL_HOST=server2.jackrose.co.nz
