--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,40 @@ services:
     image: jwilder/nginx-proxy
     ports:
       - "80:80"
+      - "443:443"
     volumes:
+      - certs:/etc/nginx/certs:ro
+      - vhost.d:/etc/nginx/vhost.d
+      - html:/usr/share/nginx/html
       - /var/run/docker.sock:/tmp/docker.sock:ro
+    labels:
+      com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy: "true"
+
+  letsencrypt-companion:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    volumes:
+      - certs:/etc/nginx/certs
+      - vhost.d:/etc/nginx/vhost.d
+      - html:/usr/share/nginx/html
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    environment:
+      - DEFAULT_EMAIL=spam@jackrose.co.nz
+    depends_on:
+      - nginx-proxy
 
   server1:
     build: ./server1
-    ports:
-      - "8081:8080"
     environment:
       - VIRTUAL_HOST=server1.jackrose.co.nz
+      - LETSENCRYPT_HOST=server1.jackrose.co.nz
 
   server2:
     build: ./server2
-    ports:
-      - "8082:8080"
     environment:
       - VIRTUAL_HOST=server2.jackrose.co.nz
+      - LETSENCRYPT_HOST=server2.jackrose.co.nz
+
+volumes:
+  certs:
+  vhost.d:
+  html:
